--- a/frontend/src/components/Header/page.module.scss
+++ b/frontend/src/components/Header/page.module.scss
@@ -11,6 +11,8 @@
     font-size: rm(24);
     font-weight: 900;
     line-height: normal;
+    text-decoration: none;
+    color: var(--black);
   }
   &__menu {
     display: flex;
