--- a/frontend/src/components/Header/page.module.scss
+++ b/frontend/src/components/Header/page.module.scss
@@ -7,12 +7,13 @@
   align-items: center;
   justify-content: space-between;
   padding: rm(25) 0;
+  color: var(--black);
   &__logo {
     font-size: rm(24);
     font-weight: 900;
     line-height: normal;
     text-decoration: none;
-    color: var(--black);
+    color: inherit;
   }
   &__menu {
     display: flex;
@@ -20,8 +21,9 @@
     list-style: none;
   }
   &__menuLink {
+    font-size: rm(14);
     font-weight: 800;
-    color: var(--black);
+    color: inherit;
     text-decoration: none;
   }
 }
