--- a/frontend/src/components/Header/page.module.scss
+++ b/frontend/src/components/Header/page.module.scss
@@ -1,15 +1,15 @@
-@import "@/styles/mixins";
+@use "@/styles/mixins";
 
 .header {
   display: flex;
   flex-wrap: wrap;
-  gap: rm(20) rm(40);
   align-items: center;
+  padding: mixins.rem(25) 0;
   justify-content: space-between;
-  padding: rm(25) 0;
+  gap: mixins.rem(20) mixins.rem(40);
   color: var(--black);
   &__logo {
-    font-size: rm(24);
+    font-size: mixins.rem(24);
     font-weight: 900;
     line-height: normal;
     text-decoration: none;
@@ -17,11 +17,11 @@
   }
   &__menu {
     display: flex;
-    gap: rm(30);
+    gap: mixins.rem(30);
     list-style: none;
   }
   &__menuLink {
-    font-size: rm(14);
+    font-size: mixins.rem(14);
     font-weight: 800;
     color: inherit;
     text-decoration: none;
