--- a/frontend/src/components/Post/page.module.scss
+++ b/frontend/src/components/Post/page.module.scss
@@ -2,4 +2,10 @@
   display: flex;
   flex-direction: column;
   gap: 20px;
+  &__text {
+    max-width: rem(600);
+  }
+  &__subtitle {
+    margin-bottom: rem(14);
+  }
 }
