--- a/frontend/src/components/Post/page.module.scss
+++ b/frontend/src/components/Post/page.module.scss
@@ -8,4 +8,10 @@
   &__subtitle {
     margin-bottom: rem(14);
   }
+  &__image {
+    position: relative;
+    width: 100%;
+    height: 400px;
+    margin-top: 30px;
+  }
 }
