--- a/frontend/src/components/Post/page.module.scss
+++ b/frontend/src/components/Post/page.module.scss
@@ -2,6 +2,7 @@
   display: flex;
   flex-direction: column;
   gap: 20px;
+  margin-bottom: 60px;
   &__text {
     max-width: rem(600);
   }
@@ -13,5 +14,13 @@
     width: 100%;
     height: 400px;
     margin-top: 30px;
+  }
+  ul {
+    margin-top: 30px;
+    padding-left: 20px;
+    max-width: rem(800);
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
   }
 }
